@@ -1,6 +1,6 @@
 dnl Functions for libcfile
 dnl
-dnl Version: 20130406
+dnl Version: 20130414
 
 dnl Function to detect if libcfile is available
 dnl ac_libcfile_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
@@ -319,10 +319,13 @@ AC_DEFUN([AX_LIBCFILE_CHECK_LOCAL],
   ])
 
  AS_IF(
-  [test "x$ac_cv_func_ioctl" != xyes],
-  [AC_MSG_FAILURE(
-   [Missing function: ioctl],
-   [1])
+  [test x"$ac_cv_enable_winapi" = xno],
+  [AS_IF(
+   [test "x$ac_cv_func_ioctl" != xyes],
+   [AC_MSG_FAILURE(
+    [Missing function: ioctl],
+    [1])
+   ])
   ])
 
  AS_IF(
