@@ -1,5 +1,5 @@
 /*
- * Windows Shortcut File (LNK) format library open close testing program
+ * Library set ASCII codepage testing program
  *
  * Copyright (c) 2009-2013, Joachim Metz <joachim.metz@gmail.com>
  *
