@@ -1,6 +1,6 @@
 #!/usr/bin/env python
 #
-# Windows Shortcut File (LNK) format library Python-bindings open close testing program
+# Python-bindings open close testing program
 #
 # Copyright (c) 2009-2013, Joachim Metz <joachim.metz@gmail.com>
 #
