@@ -1,6 +1,6 @@
 #!/bin/bash
 #
-# Windows Shortcut File (LNK) format library open close testing script
+# Library open close testing script
 #
 # Copyright (c) 2009-2013, Joachim Metz <joachim.metz@gmail.com>
 #
@@ -24,13 +24,13 @@ EXIT_SUCCESS=0;
 EXIT_FAILURE=1;
 EXIT_IGNORE=77;
 
-INPUT="input";
-
 test_open_close()
 { 
-	echo "Testing open close of input:" $*;
+	INPUT_FILE=$1;
 
-	./${LNK_TEST_OPEN_CLOSE} $*;
+	echo "Testing open close of input: ${INPUT_FILE}";
+
+	./${LNK_TEST_OPEN_CLOSE} ${INPUT_FILE};
 
 	RESULT=$?;
 
@@ -53,9 +53,9 @@ then
 	exit ${EXIT_FAILURE};
 fi
 
-if ! test -d ${INPUT};
+if ! test -d "input";
 then
-	echo "No input directory found, to test open close create a directory named input and fill it with test files.";
+	echo "No input directory found.";
 
 	exit ${EXIT_IGNORE};
 fi
@@ -64,15 +64,34 @@ OLDIFS=${IFS};
 IFS="
 ";
 
-for FILENAME in ${INPUT}/*;
-do
-	if ! test_open_close ${FILENAME};
-	then
-		exit ${EXIT_FAILURE};
-	fi
-done
+RESULT=`ls input/* | tr ' ' '\n' | wc -l`;
+
+if test ${RESULT} -eq 0;
+then
+	echo "No files or directories found in the input directory.";
+
+	EXIT_RESULT=${EXIT_IGNORE};
+else
+	for TESTDIR in input/*;
+	do
+		if [ -d "${TESTDIR}" ];
+		then
+			DIRNAME=`basename ${TESTDIR}`;
+
+			for TESTFILE in ${TESTDIR}/*;
+			do
+				if ! test_open_close "${TESTFILE}";
+				then
+					exit ${EXIT_FAILURE};
+				fi
+			done
+		fi
+	done
+
+	EXIT_RESULT=${EXIT_SUCCESS};
+fi
 
 IFS=${OLDIFS};
 
-exit ${EXIT_SUCCESS};
+exit ${EXIT_RESULT};
 
